--- a/index.html
+++ b/index.html
@@ -38,13 +38,7 @@
             allowfullscreen
           ></iframe>
           <p class="description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
+            L'estensione è stata realizzata per la piattaforma Amazon. Il progetto ha lo scopo di neutralizzare le forme di dark pattern che Amazon utilizza per indurci ad acquistare dei prodotti e abbonarci ad Amazon Prime. Quindi sono stati rimossi tutti i loghi di Prime e i bottoni arancioni.
           </p>
           <a role="button" class="btn btn-primary btn-lg" href="/">download</a>
         </div>
