--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             allowfullscreen
           ></iframe>
           <p class="description">
-            L'estensione è stata realizzata per la piattaforma Amazon. Il progetto ha lo scopo di neutralizzare le forme di dark pattern che Amazon utilizza per indurci ad acquistare dei prodotti e abbonarci ad Amazon Prime. Quindi sono stati rimossi tutti i loghi di Prime e i bottoni arancioni.
+            L'estensione è stata realizzata per la piattaforma Amazon. Il progetto ha lo scopo di neutralizzare le forme di dark pattern che Amazon utilizza per indurci ad acquistare dei prodotti e abbonarci ad Amazon Prime. Quindi sono stati rimossi alcuni loghi di Prime e i bottoni arancioni.
           </p>
           <a role="button" class="btn btn-primary btn-lg" href="/">download</a>
         </div>
