--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8" />
-    <title></title>
-    <meta name="description" content="" />
+    <title>Unprime</title>
+    <meta name="This extension has been created for Amazon platform. The purpose of the project is to neutralize the  dark patterns that Amazon uses to lead us to purchase products and subscribe to Amazon Prime. Some Prime logos and the orange buttons have been removed." content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Place favicon.ico in the root directory -->
@@ -25,24 +25,49 @@
       </p>
     <![endif]-->
     <div class="container">
+
+      <div style="margin-top:20px;" class="row">
+        <div class="col-10">
+          <img src="Unprime.png" class="img-fluid" alt="Responsive image">
+          <p style="font-size: 13px; color:#ccc" class="description intro-box">
+            Extension by Laura Pauselli and Diego Massaro
+          </p>
+        </div>
+
+        <div style="margin-top:100px" class="col-2">
+          <a role="button" class="btn btn-primary btn-lg btn-block my-button" href="unprime-1.0-fx.xpi">download</a>
+        </div>
+      </div>
+      
       <div class="row">
         <div class="col-12">
-          <h1>Unprime</h1>
+          <h5 style="color:#ffa800; margin-top:10px">DESCRIPTION</h5>
+          <p class="description intro-box">
+            This extension has been created for Amazon platform. The purpose of the project is to neutralize the  dark patterns that Amazon uses to lead us to purchase products and subscribe to Amazon Prime. Some Prime logos and the orange buttons have been removed.
+          </p>
+        </div>
+      </div>
 
-          <iframe
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/CNzfE7yivSU"
+      <div class="row">
+        <div class="col-12">
+          <h5 style="color:#ffa800; margin-top:10px; margin-bottom: 13px">HOW IT WORKS</h5>
+          <div style="margin-bottom: 40px" class="embed-responsive embed-responsive-16by9">
+           <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/NE0wpg0f3s4" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+
+          <!--<iframe
+            width="100%"
+            height="400"
+            src="https://www.youtube.com/watch?v=NE0wpg0f3s4"
             frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
-          ></iframe>
-          <p class="description">
-            L'estensione è stata realizzata per la piattaforma Amazon. Il progetto ha lo scopo di neutralizzare le forme di dark pattern che Amazon utilizza per indurci ad acquistare dei prodotti e abbonarci ad Amazon Prime. Quindi sono stati rimossi alcuni loghi di Prime e i bottoni arancioni.
-          </p>
-          <a role="button" class="btn btn-primary btn-lg" href="/">download</a>
-        </div>
-      </div>
+          ></iframe>-->
+
+          
+
     </div>
     <!-- Add your site or application content here -->
     <script
