--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Unprime</title>
-    <meta name="This extension has been created for Amazon platform. The purpose of the project is to neutralize the  dark patterns that Amazon uses to lead us to purchase products and subscribe to Amazon Prime. Some Prime logos and the orange buttons have been removed." content="" />
+    <meta name="This extension has been created for Amazon platform. The purpose of the project is to neutralize the  dark patterns that Amazon uses to lead us to purchase products and subscribe to Amazon Prime." content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Place favicon.ico in the root directory -->
@@ -28,32 +28,38 @@
 
       <div style="margin-top:20px;" class="row">
         <div class="col-10">
-          <img src="Unprime.png" class="img-fluid" alt="Responsive image">
-          <p style="font-size: 13px; color:#ccc" class="description intro-box">
-            Extension by Laura Pauselli and Diego Massaro
+          <img src="Unprime.png" width="300px" class="img-fluid" alt="Responsive image">
+          <p style="font-size: 14px; color:#4f4f4f" class="description intro-box">
+            Extension by Laura Pauselli & Diego Massaro
           </p>
         </div>
 
         <div style="margin-top:100px" class="col-2">
-          <a role="button" class="btn btn-primary btn-lg btn-block my-button" href="unprime-1.0-fx.xpi">download</a>
+          
+          <a role="button" text-align="right" class="btn btn-primary btn-lg btn-block my-button" href="unprime-1.0-fx.xpi">download</a>
         </div>
       </div>
       
       <div class="row">
         <div class="col-12">
-          <h5 style="color:#ffa800; margin-top:10px">DESCRIPTION</h5>
-          <p class="description intro-box">
-            This extension has been created for Amazon platform. The purpose of the project is to neutralize the  dark patterns that Amazon uses to lead us to purchase products and subscribe to Amazon Prime. Some Prime logos and the orange buttons have been removed.
+          <h1 style="color:#000; margin-top:10px">PROJECT</h1>
+          <p style="font-size: 21px"; class="description-intro-box">
+            This extension has been created for Amazon platform. The purpose of the project is to neutralize the  dark patterns that Amazon uses to lead us to purchase products and subscribe to Amazon Prime.
           </p>
         </div>
       </div>
 
       <div class="row">
         <div class="col-12">
-          <h5 style="color:#ffa800; margin-top:10px; margin-bottom: 13px">HOW IT WORKS</h5>
-          <div style="margin-bottom: 40px" class="embed-responsive embed-responsive-16by9">
+          <div style="margin-bottom: 40px; margin-top:40px" class="embed-responsive embed-responsive-16by9">
            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/NE0wpg0f3s4" allowfullscreen></iframe>
           </div>
+        </div>
+      </div>
+
+      <div style="margin-top:0px;" class="row">
+        <div class="col-12">
+          <img src="Spiegazione.png" class="img-fluid" alt="Responsive image">
         </div>
       </div>
 
